# music-player

./: .gitignore  CMakeLists.txt  README.md  err.txt
include/: CLInterface.h  commndInterp.h  interface.h  musicPlayer.h
src/: CLInterface.cpp  commandInterp.cpp  interface.cpp  main.cpp  musicPlayer.cpp
